--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'ABOUT US', page_pages_path('about'), title: '品牌精神' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'WHO WE ARE', page_pages_path('about'), title: '品牌精神' %>
   &nbsp; > &nbsp; COMMUNITY
 <% end %>
 
@@ -16,7 +16,7 @@
     <div class="row">
         <header class="content-title"><!-- Start .content-title 標題 -->
           <div class="title-bg">
-            <h2 class="title news">COMMUNITY<span>社群迴響</span></h2>
+            <h2 class="title community">COMMUNITY<span>社群迴響</span></h2>
           </div>
         </header><!-- End .content-title -->
         
