--- a/app/views/layouts/_front_shared_header.html.erb
+++ b/app/views/layouts/_front_shared_header.html.erb
@@ -124,7 +124,7 @@
                 <li>
                   <%= link_to about_pages_path do %>
                     品牌精神<br>
-                    ABOUT US
+                    WHO WE ARE
                   <% end %>
                 </li>
                 
