--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'ABOUT US', page_pages_path('about'), title: '品牌精神' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'WHO WE ARE', page_pages_path('about'), title: '品牌精神' %>
   &nbsp; > &nbsp; NEWS
 <% end %>
 
