--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -61,7 +61,16 @@
     <% if !flash[:warning].nil? %>
     alertify['error']("<%= flash[:warning].html_safe %>", 2000); 
     <% end %>
-  }
+    }
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ 
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), 
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) 
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); 
+
+    ga('create', 'UA-59446336-1', 'auto'); 
+    ga('send', 'pageview'); 
+
   </script>
   
 </head>
@@ -218,7 +227,7 @@
                     <li>
                       <%= link_to about_pages_path do %>
                         品牌精神<br>
-                        ABOUT US
+                        WHO WE ARE
                       <% end %>
                     </li>
                     
