--- a/app/views/admin/daily_reports/show.html.erb
+++ b/app/views/admin/daily_reports/show.html.erb
@@ -1,3 +1,4 @@
+<script src="/js_plugins/chart/Chart.js"></script>
 <style type="text/css">
   table {
     width: 100%;
@@ -6,8 +7,61 @@
   table, th, td {
    border: 1px solid black;
   }
+  canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 800px;
+  }
 </style>
 DailyReport - show<br>
+<% unless @revenue_details[0] == true || @revenue_details[1] == true %>
+  <br>= top 10 in category today<br>
+  <% @revenue_details[2].each do |record| %>
+    <%= record[0] %> => <%= record[1] %> <%= "#{((record[1].to_f/@product_revenue_amount)*100).round(3)} %" if @product_revenue_amount > 0 %><br>
+  <% end %>
+  <canvas id="myChartByCategory">
+    <script>
+      // Chart.defaults.global.responsive = true;
+      var data_by_category = <%= @chart_data_array[0].to_json.html_safe %>;
+      // Get the context of the canvas element we want to select
+      var ctx = document.getElementById("myChartByCategory").getContext("2d");
+      var myNewChart = new Chart(ctx).Doughnut(data_by_category);
+    </script>
+  </canvas><!--canvas-1 end-->
+
+  <br>= top 10 in product today<br>
+  <% @revenue_details[3].each do |record| %>
+    <%= record[0][0] %> - <%= record[0][1] %> => <%= record[1] %> <%= "#{((record[1].to_f/@product_revenue_amount)*100).round(3)} %" if @product_revenue_amount > 0 %><br>
+  <% end %>  
+  <canvas id="myChartByProduct">
+    <script>
+      // Chart.defaults.global.responsive = true;
+      var data_by_product = <%= @chart_data_array[1].to_json.html_safe %>;
+      // Get the context of the canvas element we want to select
+      var ctx = document.getElementById("myChartByProduct").getContext("2d");
+      var myNewChart = new Chart(ctx).Doughnut(data_by_product);
+    </script>
+  </canvas><!--canvas-2 end-->
+
+  <br>= top 10 in stock today<br>
+  <% @revenue_details[4].each do |record| %>
+    <%= record[0][3] %> => <%= record[1] %> <%= "#{((record[1].to_f/@product_revenue_amount)*100).round(3)} %" if @product_revenue_amount > 0 %><br>
+  <% end %>
+  <canvas id="myChartByStock">
+    <script>
+      // Chart.defaults.global.responsive = true;
+      var data_by_stock = <%= @chart_data_array[2].to_json.html_safe %>;
+      // Get the context of the canvas element we want to select
+      var ctx = document.getElementById("myChartByStock").getContext("2d");
+      var myNewChart = new Chart(ctx).Doughnut(data_by_stock);
+    </script>
+  </canvas><!--canvas-3 end-->
+  
+<% end %>
+<hr>
 
 <% unless @daily_report.blank? %>
 = latest report<br>
