--- a/app/views/admin/daily_reports/view_by_range.html.erb
+++ b/app/views/admin/daily_reports/view_by_range.html.erb
@@ -47,9 +47,11 @@ DailyReports - view by range and export by selecting scope
   </table>  
 <% end %>
 <hr>
+<%= @last_12_months_seq %>
+<% if @query_range_revenue.length > 0 %>
 <canvas id="myLine" width="700" height="300">
   <script>
-    var data2 = {
+    var data1 = {
         labels: <%= @each_day_in_range.to_json.html_safe %>,
         datasets: [
             {
@@ -64,8 +66,8 @@ DailyReports - view by range and export by selecting scope
             }
         ]
     };
-    var ctx2 = document.getElementById("myLine").getContext("2d");
-    var myNewLine = new Chart(ctx2).Line(data2, {
+    var ctx1 = document.getElementById("myLine").getContext("2d");
+    var myNewLine = new Chart(ctx1).Line(data1, {
       pointHitDetectionRadius : 2,
       responsive: true
     });
@@ -74,60 +76,59 @@ DailyReports - view by range and export by selecting scope
 
 </canvas><!--canvas-2 end-->
 
-<canvas id="myBar" width="700" height="300">
+<canvas id="myLine2" width="700" height="300">
   <script>
-  var data3 = {
-      labels: <%= @each_day_in_range.to_json.html_safe %>,
-      datasets: [
-          {
-              label: "大分類一",
-              fillColor: "rgba(220,220,220,0.5)",
-              strokeColor: "rgba(220,220,220,0.8)",
-              highlightFill: "rgba(220,220,220,0.75)",
-              highlightStroke: "rgba(220,220,220,1)",
-              data: [65, 59, 80, 81, 56, 55, 40]
-          },
-          {
-              label: "大分類二",
-              fillColor: "rgba(151,187,205,0.5)",
-              strokeColor: "rgba(151,187,205,0.8)",
-              highlightFill: "rgba(151,187,205,0.75)",
-              highlightStroke: "rgba(151,187,205,1)",
-              data: [28, 48, 40, 19, 86, 27, 90]
-          },
-          {
-              label: "大分類三",
-              fillColor: "rgba(181,151,205,0.5)",
-              strokeColor: "rgba(181,151,205,0.8)",
-              highlightFill: "rgba(181,151,205,0.75)",
-              highlightStroke: "rgba(181,151,205,1)",
-              data: [23, 25, 32, 40, 39, 77, 20]
-          },
-          {
-              label: "大分類四",
-              fillColor: "rgba(151,205,202,0.5)",
-              strokeColor: "rgba(151,205,202,0.8)",
-              highlightFill: "rgba(151,205,202,0.75)",
-              highlightStroke: "rgba(151,205,202,1)",
-              data: [33, 55, 38, 60, 36, 70, 30]
-          },
-          {
-              label: "大分類五",
-              fillColor: "rgba(205,151,166,0.5)",
-              strokeColor: "rgba(205,151,166,0.8)",
-              highlightFill: "rgba(205,151,166,0.75)",
-              highlightStroke: "rgba(205,151,166,1)",
-              data: [30, 51, 30, 30, 30, 87, 50]
-          }
-      ]
-  };
-  var ctx3 = document.getElementById("myBar").getContext("2d");
-  var myNewBar = new Chart(ctx3).Bar(data3,{
-    
-  });
-  </script>
-  </canvas><!--canvas-3 end-->
+    var data2 = {
+        labels: <%= @readable_date_months.to_json.html_safe %>,
+        datasets: [
+            {
+                label: "總營業額",
+                fillColor: "rgba(151,187,205,0.2)",
+                strokeColor: "rgba(151,187,205,1)",
+                pointColor: "rgba(151,187,205,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(151,187,205,1)",
+                data: <%= @query_range_revenue_by_month.to_json.html_safe %>
+            }
+        ]
+    };
+    var ctx2 = document.getElementById("myLine2").getContext("2d");
+    var myNewLine2 = new Chart(ctx2).Line(data2, {
+      pointHitDetectionRadius : 2,
+      responsive: true
+    });
 
+  </script>
+</canvas><!--canvas-2 end-->
+
+<canvas id="myLine3" width="700" height="300">
+  <script>
+    var data3 = {
+        labels: <%= @date_weeks.to_json.html_safe %>,
+        datasets: [
+            {
+                label: "總營業額",
+                fillColor: "rgba(151,187,205,0.2)",
+                strokeColor: "rgba(151,187,205,1)",
+                pointColor: "rgba(151,187,205,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(151,187,205,1)",
+                data: <%= @query_range_revenue_by_week.to_json.html_safe %>
+            }
+        ]
+    };
+    var ctx3 = document.getElementById("myLine3").getContext("2d");
+    var myNewLine3 = new Chart(ctx3).Line(data3, {
+      pointHitDetectionRadius : 2,
+      responsive: true
+    });
+
+  </script>
+</canvas><!--canvas-2 end-->
+
+<% end %>
 <hr>
 <% unless @sumup_report.blank? || @sumup_report[0]['total_order_count'].blank? %>
 <table class='table'>
