--- a/app/views/cart/post_order.html.erb
+++ b/app/views/cart/post_order.html.erb
@@ -17,7 +17,7 @@
   </section>
 </article>
 
-<%= form_tag("https://www.focas-test.fisc.com.tw/FOCAS_WEBPOS/online/", :id => "send_to_focas", style: "display:block;") do %>
+<%= form_tag("https://www.focas.fisc.com.tw/FOCAS_WEBPOS/online/", :id => "send_to_focas", style: "display:block;") do %>
 <%# hidden_field_tag %>
 <%= text_field_tag :MerchantID, get_focas_MID %>
 
