remove default checked

--- a/app/views/cart/check.html.erb
+++ b/app/views/cart/check.html.erb
@@ -23,7 +23,7 @@
       <%= render partial: "show_order_form", :locals => { order: @order, order_items: @order_items } %>
       
       <div class="input-group custom-checkbox">
-        <input type="checkbox" id="agree_privacy" class="checkbox" checked>
+        <input type="checkbox" id="agree_privacy" class="checkbox" >
         <span class="checbox-container"><i class="fa fa-check"></i></span>
         
            我已仔細閱讀並明瞭
