--- a/app/views/ladyboo_mailer/_footer.html.erb
+++ b/app/views/ladyboo_mailer/_footer.html.erb
@@ -1,4 +1,4 @@
-<p>注意事項：</p>
+<p>注意事項/Note：</p>
 <p>此信件為系統自動寄送，勿直接回覆此信件</p>
-<br>
-<p> <a href="http://www.ladybootw.com/">​ LadyBoo網站： http://www.ladybootw.com/</a> </p>
+<p>This email is automatically sent , do not reply to this email</p>
+<p> <a href="http://www.ladyboo.com.tw/">​ LadyBoo website： http://www.ladyboo.com.tw/</a> </p>
