--- a/app/views/ladyboo_mailer/_header_logo.html.erb
+++ b/app/views/ladyboo_mailer/_header_logo.html.erb
@@ -1,2 +1,2 @@
-<img src="cid:maillogo.jpg" alt="logo" style='float: right;' >
+<img src="cid:maillogo.jpg" alt="logo">
 <%# image_tag attachments['maillogo.jpg'].url %>
