--- a/app/views/ladyboo_mailer/atm_checkout_completed_successfully.html.erb
+++ b/app/views/ladyboo_mailer/atm_checkout_completed_successfully.html.erb
@@ -21,6 +21,23 @@
 
   <p>建議您可以<%= link_to "登入 LadyBoo網站", user_session_url ,target: "_blank" %>，查詢您的訂單以及處理進度。</p>
 
+  <br>
+
+  <p>Dear member <%= @order.buyer_name%>, hello :</p>
+
+  <p>LadyBoo thank you for your support, ( order number :<%= @order.ordernum%>)</p>
+  <p>The Order Amount : $ <%= number_with_delimiter(@ordersum) %></p>
+
+  <p>Transfer Account Name: 女駙服飾有限公司</p>
+  <p>Bank: 台北富邦銀行 ( Bank code : 012 ) </p>
+  <p>Account number: 715-10-202484-1</p>
+
+  <p>Please wire the payment within 3 days , thank you.</p>
+
+  <p>To protect your personal data, this notification letter will not display the order details.</p>
+
+  <p>You can <%= link_to "log in LadyBoo", user_session_url ,target: "_blank" %> website to check the progress of your order .</p>
+   
   <%= render "ladyboo_mailer/footer" %>
 </body>
 </html>
