--- a/app/views/ladyboo_mailer/welcome.html.erb
+++ b/app/views/ladyboo_mailer/welcome.html.erb
@@ -10,6 +10,12 @@
 
   <p>感謝您的註冊，祝您購物愉快。</p>
 
+  <br>
+
+  <p>Dear member <%= @user.username %>, hello :</p>
+  
+  <p>Thank you for registering on our website , we hope you had a pleasant shopping experience.</p>  
+
   <%= render "ladyboo_mailer/footer" %>
 </body>
 </html>
