--- a/app/views/ladyboo_mailer/ship_cod.html.erb
+++ b/app/views/ladyboo_mailer/ship_cod.html.erb
@@ -14,6 +14,16 @@
   <p>預計2~3日內會送達，若您5日內仍未收到商品，請盡速與我們聯絡以利追蹤商品，</p>
   <p>若您已經收到商品，請無須理會此封信件，謝謝！</p>
 
+  <br>
+
+  <p>Dear member <%= @order.buyer_name%>, hello :</p>
+
+  <p>LadyBoo thank you for your support , and</p>
+
+  <p>You order has been shipped , the order number : <%= @order.ordernum%> ,</p>
+  <p>is expected to arrive in 2 to 3 business days , if you do not receive the order 5 days after receiving this email, please contact us as soon as possible.</p>
+  <p>If you have received your order already , Please disregard this email , thank you !</p>
+
   <%= render "ladyboo_mailer/footer" %>
 </body>
 </html>
