品牌精神頁修改

--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -20,13 +20,14 @@
 
   <div class="col-md-10 col-md-offset-1 layout about"><!-- Start 內文 -->
     <div class="img-responsive" id="aboutBanner"></div><!-- #aboutBanner 品牌精神圖 -->
+    <h2>沒有剛剛好的衣櫃，只有剛剛好的自己</h2>
     <p>
-      <br>
-      Boo，是兩個女生之間的親密暱稱，也是 LadyBoo 品牌誕生的由來，我們希望 LadyBoo 既是服飾品牌，同時也是讓女生開心、放鬆的穿衣間，在這裡，有我們關注的時尚話題與穿搭，也有對流行觀察的私密悄悄話，歡迎妳們隨時走進來，輕鬆挑選，穿出自己獨有的風格。<br>
-      <br>
-      時尚風格很多種，簡單不失個性的穿著，卻一向是 LadyBoo 最愛，比如說，只要簡單加一點點「蕾絲」，衣服的表情立刻繽紛起來，時尚品牌如專做蕾絲服飾的澳洲品牌Lover、義大利手工蕾絲 La Perla……等，都紛紛採用了新顏色、新設計、新花樣，顛覆過去「蕾絲＝老氣」，或「蕾絲只能性感」的印象，把女生的魅力和不同面貌鈎織出來，微微透露出性感、甜美、陽光、健康及更多可能性，LadyBoo 因為愛上這一半辛辣一半甜的美學，特地把蕾絲融入日常穿著，讓每個女生都能輕易穿搭我們精心設計或挑選的時尚單品。<br>
-      <br>
-      Hey, pretty Boo！現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。</p>
+      穿衣，是一種認識自己的方式，穿上甜美，就是少女心的自己，穿上個性，就是有主張的自己，常覺得少一件衣服嗎？可能是還沒找到最舒服、自信的自己，忍不住多買一件衣服嗎？或許你相信自己並無極限。
+      <br><br>
+      LadyBoo 知道「自己」幻化多端，所以我們有原創設計的作品，也有我們親自飛到各國精選的品牌，在多樣化的風格中，LadyBoo 服飾有著共同點：注重材質與剪裁的品質，於是你將驚喜發現，自己竟能如此多變，卻又能美妙的融為一體。<span>（別再管格雷的 50 道陰影了）</span>
+      <br><br>
+      穿衣，是一種自我的延伸，跟上潮流充滿樂趣，但唯有做自己才能擁有獨一無二的美麗，當你穿上 LadyBoo 出門，你知道你是時尚的主人。
+    </p>
     </div><!-- End 內文 -->
   </div>
 
