--- a/public/css/pageAbout.css
+++ b/public/css/pageAbout.css
@@ -2,7 +2,7 @@
 .title.about { width: 350px; }
 .title.news { width: 260px; }
 .title.community { width: 360px; }
-#aboutBanner { background-image: url(../images/page/img_aboutBanner.jpg); max-width: 972px;width:100%; padding-top: 21%; background-size: contain; background-repeat: no-repeat;filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/page/img_aboutBanner.jpg', sizingMethod='scale');-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/page/img_aboutBanner.jpg', sizingMethod='scale')"; }
+#aboutBanner { background-image: url(../images/page/img_aboutBanner.jpg); max-width: 972px;width:100%; padding-top: 18%; background-size: contain; background-repeat: no-repeat;filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/page/img_aboutBanner.jpg', sizingMethod='scale');-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/page/img_aboutBanner.jpg', sizingMethod='scale')"; }
 .articles-container.col-md-9 { margin-left: auto; margin-right: auto; float: none; }
 .readMore { font-weight: bold; display: inline-block; padding-left: 20px; }
 .article h2 { font: 1.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!important }
@@ -11,7 +11,9 @@
 .article .article-meta-date span { font-size: 1.2em; }
 .article .article-meta-date { font: 1.0em Helvetica, Microsoft JhengHei; font-weight: 700; letter-spacing: 1px; }
 #wrapper { position: relative }
-
+.about h2 { font:500 1.2em Helvetica, "Microsoft JhengHei", "微軟正黑體"; color: #c9006e; padding-top:20px;}
+.about p { font-size: .95em;  }
+.about p span { font-size: .8em;  }
  @media (min-width: 1200px) {
 .article .article-meta-date { width: 85px; }
 }
@@ -32,7 +34,7 @@
 #lookbook .title span { padding: 0 0 0 2%!important; }
 #lookbook h2.title { background: none; }
 .title-bg:after { background: transparent; }
-#aboutBanner { background-image: url(../images/page/img_aboutBanner2.jpg); width: 100%; padding-top: 356px;background-color: #1b1b1b; background-size: auto; background-position: center top;}
+#aboutBanner { background-image: url(../images/page/img_aboutBanner2.jpg); width: 100%; padding-top: 260px;background-color: #1b1b1b; background-size: auto; background-position: center top;}
 .col-md-10 { padding: 0px; }
 .col-md-10 p { padding: 0 10px; }
 .article .article-meta-date { font-size: 0.8em; width: 50px; height: 45px; padding: 11px 0; line-height: 1em; font-weight: 300; margin-left: 10px; }
@@ -44,4 +46,5 @@
 .article-content-container { margin-left: -40px; font-size: 0.9em }
 .readMore { float: right; margin-top: 0; }
 .carousel-controls { right: 15px; }
+.about h2 { padding:20px 10px 0 10px;}
 }
